--- a/index.html
+++ b/index.html
@@ -15,12 +15,28 @@
     <header>
         <div class="container-header">
             <nav>
-                <ul>
-                    <li><a href="#about">О нас</a></li>
-                    <li><a href="#articles">Статьи</a></li>
-                    <li><a href="#Материалы">Материалы</a></li>
-                    <li><a href="#Контакты">Контакты</a></li>
-                </ul>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#about">О нас</a></li>
+                        <li><a href="#mac">Статьи</a></li>
+                        <li><a href="#regression">МАК</a></li>
+                        <li><a href="#articles">Регрессии</a></li>
+                        <li><a href="#contacts">Контакты</a></li>
+                    </ul>
+                </div>  
+                <div class="hamburger">
+                    <svg class="ham hamRotate ham1" viewBox="0 15 100 85" width="70" onclick="this.classList.toggle('active'); document.querySelector('.menu').classList.toggle('menu_active')">
+                        <path
+                              class="line top"
+                              d="m 30,33 h 40 c 0,0 9.044436,-0.654587 9.044436,-8.508902 0,-7.854315 -8.024349,-11.958003 -14.89975,-10.85914 -6.875401,1.098863 -13.637059,4.171617 -13.637059,16.368042 v 40" />
+                        <path
+                              class="line middle"
+                              d="m 30,50 h 40" />
+                        <path
+                              class="line bottom"
+                              d="m 30,67 h 40 c 12.796276,0 15.357889,-11.717785 15.357889,-26.851538 0,-15.133752 -4.786586,-27.274118 -16.667516,-27.274118 -11.88093,0 -18.499247,6.994427 -18.435284,17.125656 l 0.252538,40" />
+                    </svg>
+                </div>
             </nav>
         </div>
     </header>
@@ -28,13 +44,11 @@
         <div class="container">
             <div class="container_logo">
                 <div class="container_1">
-                    <img src="img/Olga1.jpg" alt="Ольга">
                     <span class="container_1_descr">Метафорические карты</br>
                     <a href="#about" class="container_1_info">Подробнее</a>
                     </span>
                 </div>
                 <div class="container_main">
-                    <img src="img/hearts.jpg" alt="Заставка">
                     <span class="container_main_descr">
                         Метафорические карты + Регрессии
                     </span>
@@ -48,11 +62,38 @@
                     </ul>
                 </div>
                 <div class="container_2">
-                    <img src="img/Olga2.jpg" alt="Ольга">
                     <span class="container_2_descr">Регрессии</br>
                     <a href="#about" class="container_2_info">Подробнее</a>
                     </span>
                 </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="container_general">
+                <div class="container_about">
+                    <h3></h3>
+                </div>
+                <div class="container_mac"></div>
+                <div class="container_regression">
+                    <div class="container_regression_img"></div>
+                    <h3>
+                        Регресси начало
+                    </h3>
+                    <span>
+                        К регрессиям я пришла неожиданно, в период, когда почувствовала потерянность и неопределенность (написать в чем потерянность и неопределенность). Это настолько «мне надоело - ЗАМЕНИТЬ», что пора было разобраться. 
+                    </span><br>
+                    <span>
+                        Я уже много знала из метафизики и восточной нумерологии, но «решения задач не происходило». Тогда я обратилась к регрессиям в прошлые жизни. (лучше понять себя…)  Написать про школу. В ходе обучения регрессиям уже были видны сдвиги в моем состоянии. Появилась осознанность в том, что и откуда приходит, а главное почему. Регрессии помогли понять и скорректировать отношения с мужем, моими детьми, близкими (Прописать как именно). Истинно открыть свой путь и признать предназначение.
+                    </span><br>
+                    <span>
+                        Работа на курсе и последующая практика по запросам «со страхами, фобиями, тяжелых связей и разрыв отношений…» и многим другим доказали эффективность регрессии в решении сложных задач.  Написать эффект от регрессий.
+                    </span><br>
+                    <span>
+                        Горжусь собой, своими знаниями и учителями, которые стали вовремя приходящими в мою жизнь!                        
+                    </span>
+                </div>
+                <div class="container_articles"></div>
+                <div class="container_contacts"></div>
             </div>
         </div>
     </section>
