--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Всё о метафорических картах и регрессиях></title>
+    <meta name="description" content="Решение жизненных проблем с помощью проверенных практик используемых именитыми психологами в их профессиональной деятельности " />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@2Olgi" />
     <meta name="twitter:creator" content="@LapEv" />
+	<meta name="twitter:title" content="Всё о метафорических картах и регрессиях">
+	<meta name="twitter:description" content="Решение жизненных проблем с помощью проверенных практик используемых именитыми психологами в их профессиональной деятельности">
+    <meta name="twitter:image" content="https://lapev.github.io/img/2Olgi.png">
     <meta property="og:url" content="https://lapev.github.io" />
     <meta property="og:title" content="Всё о метафорических картах и регрессиях" />
     <meta property="og:description" content="Решение жизненных проблем с помощью проверенных практик используемых именитыми психологами в их профессиональной деятельности" />
@@ -44,10 +49,15 @@
             </nav>
         </div>
     </header>
-    <section class="main" id="top">
+    <section class="main" id="maintop">
+        <div class="loading_page">
+            <img src="img/LoadPage.gif"" alt="Loading">
+            <span>Загрузка</span>
+        </div>
         <div class="main_container">
             <div class="container_logo">
                 <div class="container_1">
+                    <div class="container_1_blur"></div>
                     <span class="container_1_descr">Метафорические карты</br>
                     <a href="#" class="container_1_info">Подробнее</a>
                     </span>
@@ -69,7 +79,8 @@
                     <img src="/img/delimiter_2.png" class="delimiter_2" alt="Разделитель2">
                 </div>
                 <div class="container_2">
-                    <span class="container_2_descr">Регрессии</br>
+                        <div class="container_2_blur"></div>
+                        <span class="container_2_descr">Регрессии</br>
                     <a href="#" class="container_2_info">Подробнее</a>
                     </span>
                 </div>
@@ -163,7 +174,7 @@
                         <div class="article_img_1">
                             <img src="" alt="Картинка" class="general_1">
                         </div>
-                        <div class="article_text_3">
+                        <div class="article_text_1">
                             <h3>Статья №1</h3>
                             <span>Кто я? Пришло время, когда я готова ответить на этот вопрос.
 
@@ -299,10 +310,10 @@
                     <div class="contact_1">
                         <div class="box_shadow_1"></div>
                         <div class="social">
-                            <p>Ольга Рудаш</p>
+                            <p>Ольга Рудаш</p><br>
                             <p>МАК</p>
                             <div class="social_items">
-                                <a href="https://vk.com/id278093970" target="_blank" title="Связаться с Ольгой Рудаш в Вконтакте"><img src="/icons/vk.svg" alt="Вконтакте">vk.com/id278093970</a>
+                                <a href="https://vk.com/id278093970" target="_blank" title="Связаться с Ольгой Рудаш в Вконтакте"><img src="/icons/vk.svg" alt="Вконтакте">id278093970</a>
                             </div>
                             <div class="social_items">
                                 <img src="/icons/instagram.svg" target="_blank" alt="Instagram">
@@ -316,20 +327,20 @@
                         </div>
                     </div>
                     <div class="contact_2">
-                        <div class="social">
-                            <p>2Ольги</p>
+                        <div class="social_group">
+                            <p>2Ольги</p><br>
                             <p>Группа</p>
-                            <div class="social_items">
-                                <a href="https://vk.com/club183106924" target="_blank" title="Написать в группу 2Ольги"><img src="/icons/vk.svg" alt="Вконтакте">vk.com/club183106924</a>
+                            <div class="social_group_items">
+                                <a href="https://vk.com/club183106924" target="_blank" title="Написать в группу 2Ольги"><img src="/icons/vk.svg" alt="Вконтакте">club183106924</a>
                             </div>
-                            <div class="social_items">
+                            <div class="social_group_items">
                                 <img src="/icons/instagram.svg" target="_blank" alt="Instagram">
                             </div>
-                            <div class="social_items">
+                            <div class="social_group_items">
                                 <img src="/icons/facebook.svg" target="_blank" alt="Facebook">
                             </div>
-                            <div class="social_items">
-                                <a href="#" class="feedback"><img src="/icons/mail.svg" alt="Mail"></a>
+                            <div class="social_group_items">
+                                <a href="#" class="feedback"><img src="/icons/mail.svg" alt="Mail">Написать нам</a>
                             </div>
                         </div>
                         <ul class="contact_2_logo ">
@@ -344,16 +355,16 @@
                     <div class="contact_3">
                         <div class="box_shadow_3"></div>
                         <div class="social">
-                            <p>Ольга Лапкина</p>
+                            <p>Ольга Лапкина</p><br>
                             <p>Регрессолог</p>
                                 <div class="social_items">
-                                <a href="https://vk.com/id2660880" target="_blank" title="Связаться с Ольгой Лапкиной в Вконтакте"><img src="/icons/vk.svg" alt="Вконтакте">vk.com/id2660880</a>
+                                <a href="https://vk.com/id2660880" target="_blank" title="Связаться с Ольгой Лапкиной в Вконтакте"><img src="/icons/vk.svg" alt="Вконтакте">id2660880</a>
                             </div>
                             <div class="social_items">
-                                <img src="/icons/instagram.svg" target="_blank" alt="Instagram">
+                                <a href="https://instagram.com/lapkina6416" target="_blank" title="Связаться с Ольгой Лапкиной в Instagram"><img src="/icons/instagram.svg" alt="Instagram">lapkina6416</a>
                             </div>
                             <div class="social_items">
-                                <img src="/icons/facebook.svg" target="_blank" alt="Facebook">
+                                <a href="https://www.facebook.com/profile.php?id=100014775069349&fref=profile_friend_list&hc_location=friends_tab" target="_blank" title="Связаться с Ольгой Лапкиной в Facebook"><img src="/icons/facebook.svg" alt="Facebook">lapkinaolga</a>
                             </div>
                             <div class="social_items">
                                 <a href="skype:olga8405?chat" title="Связаться с Ольгой Лапкиной по Skype чату"><img src="/icons/skype.svg" alt="Skype">olga8405</a>
@@ -364,6 +375,7 @@
                 <div class="container_general_6 active_no">
                     <div class="container_form">
                         <h2>Форма обратной связи</h2>
+                        <h2 class="cross">&#10008;</h2>
                         <form id="contactForm" action="smart.php" method="post">
                             <div class="field-block">
                                 <label for="name">Кому:</label>
@@ -402,7 +414,7 @@
                                 <span id="answer"></span>
                                 <span id="loader" class="loading">
                                     <div class="loading_img">
-                                        <img src="img/loading.gif"" alt="">
+                                        <img src="img/LoadPage.gif"" alt="">
                                     </div>
                                 </span>
                             </div>
@@ -443,10 +455,10 @@
                             <a href="#"><img src="/icons/instagram.svg" target="_blank" alt="Instagram"></a>
                         </div>                    
                         <div class="social_items">
-                            <a href="#" class="feedback"><img src="/icons/mail.svg" alt="Mail"></a>
+                            <a href="#" class="share"><img src="/icons/share.svg" alt="Share"></a>
                         </div>                    
                         <div class="social_items">
-                            <a href="#" class="share"><img src="/icons/share.svg" alt="Share"></a>
+                            <a href="#" class="feedback"><img src="/icons/mail.svg" alt="Mail"></a>
                         </div>                    
                     </div>
                     <div class="footer_share active_no">
