--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <nav>
                 <div class="menu">
                     <ul>
-                        <li><a href="#">О нас</a></li>
-                        <li><a href="#">МАК</a></li>
-                        <li><a href="#">Регрессии</a></li>
-                        <li><a href="#">Статьи</a></li>
-                        <li><a href="#">Контакты</a></li>
+                        <li><a href="#aboutus">О нас</a></li>
+                        <li><a href="#mac">МАК</a></li>
+                        <li><a href="#regressions">Регрессии</a></li>
+                        <li><a href="#articles">Статьи</a></li>
+                        <li><a href="#contacts">Контакты</a></li>
                     </ul>
                 </div>  
                 <div class="hamburger">
@@ -446,19 +446,19 @@
                 <div class="footer_contshare">
                     <div class="footer_contacts">
                         <div class="social_items">
-                            <a href="#" target="_blank" title="2Olgi в Вконтакте"><img src="/icons/vk.svg" alt="Группа Вконтакте"></a>
+                            <a href="#vk2Olgi" target="_blank" title="2Olgi в Вконтакте"><img src="/icons/vk.svg" alt="Группа Вконтакте"></a>
                         </div>
                         <div class="social_items">
-                            <a href="#" target="_blank" title="2Olgi в Facebook"><img src="/icons/facebook.svg" alt="Facebook"></a>
+                            <a href="#facebook2Olgi" target="_blank" title="2Olgi в Facebook"><img src="/icons/facebook.svg" alt="Facebook"></a>
                         </div>
                         <div class="social_items">
-                            <a href="#" target="_blank" title="2Olgi в Instagram"><img src="/icons/instagram.svg" alt="Instagram"></a>
+                            <a href="#instagram2Olgi" target="_blank" title="2Olgi в Instagram"><img src="/icons/instagram.svg" alt="Instagram"></a>
                         </div>                    
                         <div class="social_items">
-                            <a href="#" class="share" title="Поделитсья"><img src="/icons/share.svg" alt="Share"></a>
+                            <a href="#share" class="share" title="Поделитсья"><img src="/icons/share.svg" alt="Share"></a>
                         </div>                    
                         <div class="social_items">
-                            <a href="#" class="feedback" title="Написать нам"><img src="/icons/mail.svg" alt="Mail"></a>
+                            <a href="#feedback2Olgi" class="feedback" title="Написать нам"><img src="/icons/mail.svg" alt="Mail"></a>
                         </div>                    
                     </div>
                     <div class="footer_share active_no">
