--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="container_1">
                     <div class="container_1_blur"></div>
                     <span class="container_1_descr">Метафорические карты</br>
-                    <a href="#" class="container_1_info">Подробнее</a>
+                    <a href="#mac" class="container_1_info">Подробнее</a>
                     </span>
                 </div>
                 <div class="container_3">
@@ -81,7 +81,7 @@
                 <div class="container_2">
                         <div class="container_2_blur"></div>
                         <span class="container_2_descr">Регрессии</br>
-                    <a href="#" class="container_2_info">Подробнее</a>
+                    <a href="#regressions" class="container_2_info">Подробнее</a>
                     </span>
                 </div>
             </div>
@@ -129,43 +129,43 @@
                         <div class="article_row">   
                             <div class="article_col">
                                 <div class="article_href">
-                                    <a href="#">Статья1</a>
+                                    <a href="#article1">Статья1</a>
                                 </div>
                             </div>
                             <div class="article_col">
                                 <div class="article_href">
-                                    <a href="#">Статья2</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="article_row">   
-                            <div class="article_col">
-                                <div class="article_href">
-                                    <a href="#">Статья3</a>
-                                </div>
-                            </div>
-                            <div class="article_col">
-                                <div class="article_href">
-                                    <a href="#">Статья4</a>
+                                    <a href="#article2">Статья2</a>
                                 </div>
                             </div>
                         </div>
                         <div class="article_row">   
                             <div class="article_col">
                                 <div class="article_href">
-                                    <a href="#">Статья5</a>
+                                    <a href="#article3">Статья3</a>
                                 </div>
                             </div>
                             <div class="article_col">
                                 <div class="article_href">
-                                    <a href="#">Статья6</a>
+                                    <a href="#article4">Статья4</a>
                                 </div>
                             </div>
                         </div>
                         <div class="article_row">   
                             <div class="article_col">
                                 <div class="article_href">
-                                    <a href="#">Статья7</a>
+                                    <a href="#article5">Статья5</a>
+                                </div>
+                            </div>
+                            <div class="article_col">
+                                <div class="article_href">
+                                    <a href="#article6">Статья6</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="article_row">   
+                            <div class="article_col">
+                                <div class="article_href">
+                                    <a href="#article7">Статья7</a>
                                 </div>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
                         </div>
                         <div class="article_menu">
                             <a href="#">Предыдущая статья</a>
-                            <a href="#">К списку статей</a>
+                            <a href="#articles">К списку статей</a>
                             <a href="#">Следующая статья</a>
                         </div>
                     </div>
@@ -226,7 +226,7 @@
                         </div>
                         <div class="article_menu">
                             <a href="#">Предыдущая статья</a>
-                            <a href="#">К списку статей</a>
+                            <a href="#articles">К списку статей</a>
                             <a href="#">Следующая статья</a>
                         </div>
                     </div>
@@ -241,7 +241,7 @@
                         </div>
                         <div class="article_menu">
                             <a href="#">Предыдущая статья</a>
-                            <a href="#">К списку статей</a>
+                            <a href="#articles">К списку статей</a>
                             <a href="#">Следующая статья</a>
                         </div>
                     </div>
@@ -256,7 +256,7 @@
                         </div>
                         <div class="article_menu">
                             <a href="#">Предыдущая статья</a>
-                            <a href="#">К списку статей</a>
+                            <a href="#articles">К списку статей</a>
                             <a href="#">Следующая статья</a>
                         </div>
                     </div>
@@ -271,7 +271,7 @@
                         </div>
                         <div class="article_menu">
                             <a href="#">Предыдущая статья</a>
-                            <a href="#">К списку статей</a>
+                            <a href="#articles">К списку статей</a>
                             <a href="#">Следующая статья</a>
                         </div>
                     </div>
@@ -286,7 +286,7 @@
                         </div>
                         <div class="article_menu">
                             <a href="#">Предыдущая статья</a>
-                            <a href="#">К списку статей</a>
+                            <a href="#articles">К списку статей</a>
                             <a href="#">Следующая статья</a>
                         </div>
                     </div>
@@ -301,7 +301,7 @@
                         </div>
                         <div class="article_menu">
                             <a href="#">Предыдущая статья</a>
-                            <a href="#">К списку статей</a>
+                            <a href="#articles">К списку статей</a>
                             <a href="#">Следующая статья</a>
                         </div>
                     </div>
