--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                         <div class="article_menu">
                             <a href="#">Предыдущая статья</a>
                             <a href="#articles">К списку статей</a>
-                            <a href="#">Следующая статья</a>
+                            <a href="#article2">Следующая статья</a>
                         </div>
                     </div>
                     <div class="article active_no">
@@ -225,9 +225,9 @@
                             </span><br><br>
                         </div>
                         <div class="article_menu">
-                            <a href="#">Предыдущая статья</a>
+                            <a href="#article1">Предыдущая статья</a>
                             <a href="#articles">К списку статей</a>
-                            <a href="#">Следующая статья</a>
+                            <a href="#article3">Следующая статья</a>
                         </div>
                     </div>
                     <div class="article active_no">
@@ -240,9 +240,9 @@
                             </span><br><br>
                         </div>
                         <div class="article_menu">
-                            <a href="#">Предыдущая статья</a>
+                            <a href="#article2">Предыдущая статья</a>
                             <a href="#articles">К списку статей</a>
-                            <a href="#">Следующая статья</a>
+                            <a href="#article4">Следующая статья</a>
                         </div>
                     </div>
                     <div class="article active_no">
@@ -255,9 +255,9 @@
                             </span><br><br>
                         </div>
                         <div class="article_menu">
-                            <a href="#">Предыдущая статья</a>
+                            <a href="#article3">Предыдущая статья</a>
                             <a href="#articles">К списку статей</a>
-                            <a href="#">Следующая статья</a>
+                            <a href="#article5">Следующая статья</a>
                         </div>
                     </div>
                     <div class="article active_no">
@@ -270,9 +270,9 @@
                             </span><br><br>
                         </div>
                         <div class="article_menu">
-                            <a href="#">Предыдущая статья</a>
+                            <a href="#article4">Предыдущая статья</a>
                             <a href="#articles">К списку статей</a>
-                            <a href="#">Следующая статья</a>
+                            <a href="#article6">Следующая статья</a>
                         </div>
                     </div>
                     <div class="article active_no">
@@ -285,12 +285,12 @@
                             </span><br><br>
                         </div>
                         <div class="article_menu">
-                            <a href="#">Предыдущая статья</a>
+                            <a href="#article5">Предыдущая статья</a>
                             <a href="#articles">К списку статей</a>
-                            <a href="#">Следующая статья</a>
+                            <a href="#article7">Следующая статья</a>
                         </div>
                     </div>
-                    <div class="article active_no">
+                    <div class="article active_no" id="article7">
                         <div class="article_img_7">
                             <img src="" alt="Картинка" class="general_7">
                         </div>
@@ -300,9 +300,9 @@
                             </span><br><br>
                         </div>
                         <div class="article_menu">
-                            <a href="#">Предыдущая статья</a>
+                            <a href="#article6">Предыдущая статья</a>
                             <a href="#articles">К списку статей</a>
-                            <a href="#">Следующая статья</a>
+                            <a href="#article8">Следующая статья</a>
                         </div>
                     </div>
                 </div>
@@ -440,19 +440,20 @@
                         <p><img src="/icons/copyright.svg" alt="Copyright">Сообщество 2Ольги, 2019</p>
                     </div>    
                     </div>
-                <div class="footer_last_articles">Последняя Статья<br>
-                        <span>Article</span>
+                <div class="footer_last_articles">
+                    <span>Последняя Статья</span><br>
+                    <a href="#article">Article</a>
                 </div>
                 <div class="footer_contshare">
                     <div class="footer_contacts">
                         <div class="social_items">
-                            <a href="#vk2Olgi" target="_blank" title="2Olgi в Вконтакте"><img src="/icons/vk.svg" alt="Группа Вконтакте"></a>
+                            <a href="#vk2Olgi" title="2Olgi в Вконтакте"><img src="/icons/vk.svg" alt="Группа Вконтакте"></a>
                         </div>
                         <div class="social_items">
-                            <a href="#facebook2Olgi" target="_blank" title="2Olgi в Facebook"><img src="/icons/facebook.svg" alt="Facebook"></a>
+                            <a href="#facebook2Olgi" title="2Olgi в Facebook"><img src="/icons/facebook.svg" alt="Facebook"></a>
                         </div>
                         <div class="social_items">
-                            <a href="#instagram2Olgi" target="_blank" title="2Olgi в Instagram"><img src="/icons/instagram.svg" alt="Instagram"></a>
+                            <a href="#instagram2Olgi" title="2Olgi в Instagram"><img src="/icons/instagram.svg" alt="Instagram"></a>
                         </div>                    
                         <div class="social_items">
                             <a href="#share" class="share" title="Поделитсья"><img src="/icons/share.svg" alt="Share"></a>
