--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <nav>
                 <div class="menu">
                     <ul>
-                        <li><a href="#aboutus">О нас</a></li>
-                        <li><a href="#mac">МАК</a></li>
-                        <li><a href="#regressions">Регрессии</a></li>
-                        <li><a href="#articles">Статьи</a></li>
-                        <li><a href="#contacts">Контакты</a></li>
+                        <li><a href="#main">Главная</a></li>
+                        <li><a href="#mac" title="2Oльги. МАК">МАК</a></li>
+                        <li><a href="#regressions" title="2Oльги. Регрессии">Регрессии</a></li>
+                        <li><a href="#articles" title="2Oльги. Статьи">Статьи</a></li>
+                        <li><a href="#contacts" title="2Oльги. Контакты">Контакты</a></li>
                     </ul>
                 </div>  
                 <div class="hamburger">
