--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Всё о метафорических картах и регрессиях></title>
+    <title>2Oльги. Всё о метафорических картах и регрессиях></title>
     <meta name="description" content="Решение жизненных проблем с помощью проверенных практик используемых именитыми психологами в их профессиональной деятельности " />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@2Olgi" />
     <meta name="twitter:creator" content="@LapEv" />
-	<meta name="twitter:title" content="Всё о метафорических картах и регрессиях">
+	<meta name="twitter:title" content="2Oльги. Всё о метафорических картах и регрессиях">
 	<meta name="twitter:description" content="Решение жизненных проблем с помощью проверенных практик используемых именитыми психологами в их профессиональной деятельности">
     <meta name="twitter:image" content="https://lapev.github.io/img/2Olgi.png">
     <meta property="og:url" content="https://lapev.github.io" />
-    <meta property="og:title" content="Всё о метафорических картах и регрессиях" />
+    <meta property="og:title" content="2Oльги. Всё о метафорических картах и регрессиях" />
     <meta property="og:description" content="Решение жизненных проблем с помощью проверенных практик используемых именитыми психологами в их профессиональной деятельности" />
     <meta property="og:image" content="https://lapev.github.io/img/2Olgi.png" />
     <link rel="stylesheet" href="css/font.css">
