--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                 <div class="container_general_6 active_no">
                     <div class="container_form">
                         <h2>Форма обратной связи</h2>
-                        <h2 class="cross">&#10008;</h2>
+                        <h2 class="cross"><a href="#feedbackclose">&#10008;</a></h2>
                         <form id="contactForm" action="smart.php" method="post">
                             <div class="field-block">
                                 <label for="name">Кому:</label>
