--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <nav>
                 <div class="menu">
                     <ul>
-                        <li><a href="#main">Главная</a></li>
+                        <li><a href="#main" title="2Oльги. Всё о метафорических картах и регрессиях">Главная</a></li>
                         <li><a href="#mac" title="2Oльги. МАК">МАК</a></li>
                         <li><a href="#regressions" title="2Oльги. Регрессии">Регрессии</a></li>
                         <li><a href="#articles" title="2Oльги. Статьи">Статьи</a></li>
