--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                             <a href="#article7">Следующая статья</a>
                         </div>
                     </div>
-                    <div class="article active_no" id="article7">
+                    <div class="article active_no">
                         <div class="article_img_7">
                             <img src="" alt="Картинка" class="general_7">
                         </div>
